--- a/nginx.conf
+++ b/nginx.conf
@@ -13,4 +13,19 @@ server {
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     }
 }
+server {
+    listen 80 ssl;
+    server_name healthapp.space;
+    server_tokens off;
+
+    ssl_certificate /etc/nginx/keys/healthapp.space.crt;
+    ssl_certificate_key /etc/nginx/keys/healthapp.space.key;
+
+    location / {
+        proxy_pass  http://mongo-express:8081;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+}
 
